[package]
name = "htrs"
description = "HTTP CLI for services across multiple environments"
license = "MIT"
version = "1.1.0"
edition = "2021"
repository = "https://github.com/Pseudooo/htrs"

[dependencies]
clap = { version = "4.5.40", features = ["string"] }
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
lazy_static = "1.5.0"

[dev-dependencies]
rstest = "0.25.0"
