[package]
name = "htrs"
description = "HTTP CLI for services across multiple environments"
license = "MIT"
version = "2.0.0"
edition = "2021"
repository = "https://github.com/Pseudooo/htrs"

[dependencies]
clap = { version = "4.5.49", features = ["string"] }
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
lazy_static = "1.5.0"

[dev-dependencies]
rstest = "0.26.1"
assert_cmd = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"]}
