[package]
name = "htrs"
description = "HTTP CLI for services across multiple environments"
license = "MIT"
version = "2.0.2"
edition = "2024"
repository = "https://github.com/Pseudooo/htrs"

[dependencies]
clap = { version = "4.6.1", features = ["string"] }
regex = "1.12.3"
reqwest = { version = "0.13.3", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
lazy_static = "1.5.0"

[dev-dependencies]
rstest = "0.26.1"
assert_cmd = "2.0.17"
uuid = { version = "1.18.1", features = ["v4"]}
httptest = "0.16.3"
predicates = "3.1.3"